# ssd1683

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/esp32s3/: Cargo.toml
ref/GDEQ042T81_Arduino/: Display_EPD_W21.cpp  Display_EPD_W21_spi.h  GDEQ042T81_Arduino.ino
src/: command.rs  error.rs  graphics.rs  interface.rs  lib.rs
src/graphics/: color.rs  config.rs  tools.rs
